Adjust styling on booking dashboard to fix alignment and emphasize booking status

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -37,6 +37,14 @@ body {
     padding: 0px;
 }
 
+.green {
+    color: green;
+}
+
+.red {
+    color: red;
+}
+
 /* Sign in / Sign out / Register pages */
 
 .container-authentication {
